Removed white space bug

--- a/src/main.module.scss
+++ b/src/main.module.scss
@@ -6,8 +6,7 @@
 
 body {
   margin: 0;
-  height: 100vh;
-  overflow-y: hidden;
+  height: 100.1%;
 }
 
 h1 {
